Mon Jul  3 12:38:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change some FIXME's to \todo's - the new doxygen tag.  This should
	  be used in most situations where we used to use FIXME, now.

Mon Jul  3 12:29:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added get_description() methods to all API objects, returning
	  a human readable description of the contents of the object.

	* Added output operators for API objects, so that you can do
	  "cout << omenquire;"

	* Improved debug messages when displaying API calls, so that full
	  information is given about the parameters and return types.

Sun Jul  2 17:17:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updated doxygen configuration files for doxygen 1.1.5.

	* Configure now checks for dot tool, and sets doxygen config files
	  accordingly.

Fri Jun 30 16:04:19 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an om_stringstream class as a simple implementation of 
	  something like std::stringstream.

	* Debug messages now have a finer-grain lock to avoid entangling
	  of messages or deadlocks.

Fri Jun 30 12:48:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixes to Makefile dependencies for internaltest.

Thu Jun 29 03:39:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix tests/Makefile.am so that internaltest links again.

	* Fix some deadlocks caused by Debugging mutex.  Then remove the
	  debugging mutex, because it causes more problems than it solves.

Thu Jun 29 03:13:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Display an initial debugging message before starting a test run,
	  thus avoiding a mistaken complaint of a memory leak.

Thu Jun 29 03:06:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix typo causing nettests to fail: was trying to open network
	  databases as writable.
